backend: Corrigindo toList()