@@ -1,6 +1,7 @@
 package com.petworld.restapi.models.response;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import com.petworld.restapi.entities.Veterinario;
 
@@ -27,7 +28,7 @@ public class VeterinarioResponse {
     }
 
     public static List<VeterinarioResponse> list(List<Veterinario> entities) {
-        return entities.stream().map(e -> new VeterinarioResponse(e)).toList();
+        return entities.stream().map(e -> new VeterinarioResponse(e)).collect(Collectors.toList());
     }
 
     public static Page<VeterinarioResponse> page(Page<Veterinario> page) {
